# OpenApps

./: .gitignore  CONTRIBUTING.md  README.md  index.html  launch.py  launch_agent.py  launch_parallel_agents.py  mkdocs.yml  pyproject.toml  setup.sh  setup_javapath.sh  setup_pyserini.sh
.github/workflows/: static.yml  test_playground.yml
config/: config.yaml  config_parallel_tasks.yaml  config_parallel_tasks_across_goal_variations.yaml
config/agent/: GPT-4o.yaml  GPT-5-1.yaml  GPT-5-4.yaml  GPT-5.4-computer-use.yaml  GPT-5.4.yaml  GPT-5.5-computer-use.yaml  GPT-5.5-screen-and-text.yaml  GPT-5.5-with-text.yaml  GPT-5.5.yaml  UI-TARS-1.5-7B.yaml  axtree-only.yaml  claude_4_sonnet.yaml  default.yaml  dummy.yaml  gemini-2.5-flash.yaml  screenshot-only.yaml
config/browsergym_env_args/: default.yaml
config/mode/: local.yaml  slurm_cluster.yaml
config/tasks/: all_tasks.yaml  longer_horizon.yaml  original_tasks.yaml  user_goal_variations.yaml
docs/: Intro to UI Agents.md  agents.md  index.md  installation.md  tasks.md
site/: Intro to UI Agents.md  agents.md  index.html  index.md  sitemap.xml  tasks.md
site/Intro to UI Agents/: index.html
site/agents/: index.html
site/installation/: index.html
site/search/: search_index.json
site/tasks/: index.html
src/open_apps/: __init__.py  configs.py  launcher.py  runtime.py  state.py  utils.py
tests/: save_screenshots.py  test_apps.py  test_longer_horizon.py  test_mcp.py  test_parallel_tasks.py  test_questions.py  test_tasks.py
tests/states/: add_christmas_shopping_event.json  call_mom_todo_state.json  (+1 more)
(+137 files in other folders)
